# copilot-usage-tracker

./: .coverage  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: build-release.yml
src/copilot_usage/: __init__.py  __main__.py  calculator.py  cli.py  config.py  dashboard.py  interactive.py  log_parser.py  models.py  onboarding.py  plans.py  storage.py
tests/: test_calculator.py  test_calculator_extended.py  test_config.py  test_dashboard.py  test_log_parser.py  test_log_parser_extended.py  test_models.py  test_plans.py  test_storage.py
